--- a/src/hackathons/bitcoin/live.html
+++ b/src/hackathons/bitcoin/live.html
@@ -41,7 +41,7 @@
     <div class="parallax">
       <img src="bitcoin.jpg">
       <h1 id="title">Should we buy or sell Bitcoins (Live)?
-        <div class="authors">by Name1, Name2, Name3, Name4, </div>
+        <div class="authors">by Mingqi Liew, Sushant Mittal, Andrey Shprengel </div>
       </h1>
     </div>
   </div>
