--- a/src/week12/individual/words.html
+++ b/src/week12/individual/words.html
@@ -1,4 +1,4 @@
-<html>
+  <html>
 <head>
   <title>Google Book Words</title>
     <style>
@@ -148,43 +148,149 @@ function example(){
 }
 
 function func1(){
-  return '...'
+  items2 =_.filter(items,{'word':'data'})
+
+  items1=_.sortBy(items2,'decade')
+//  items=_.pairs(items)
+items1=_.map(items1,function(d){return 'decade  '+d.decade +'   '+'rank  '+ d.rank})
+  console.log(items1)
+   return items1.join(', ')
 }
 
 function func2(){
-  return '...'
+  console.log(items)
+  items3 =_.filter(items,{'word':'oil'})
+  console.log(items)
+  items4=_.sortBy(items3,function(d){return parseInt(d.count)}).reverse()
+  //  items=_.pairs(items)
+//  items=_.map(items,function(d){count 'decade  '+d.decade +'   '+'rank  '+ d.rank})
+  console.log(items4)
+   return items4[0].decade
+  //return '...'
 }
 
 function func3(){
-  return '...'
+  console.log(items)
+  items5 =_.filter(items,{'word':'feminism'})
+  console.log(items)
+  items6=_.sortBy(items5,'decade')
+  //  items=_.pairs(items)
+//  items=_.map(items,function(d){count 'decade  '+d.decade +'   '+'rank  '+ d.rank})
+  console.log(items)
+   return items6[0].decade
 }
 
 function func4(){
-  return '...'
+  items2 =_.filter(items,{'word':'communism'})
+
+  items1=_.sortBy(items2,'decade')
+//  items=_.pairs(items)
+items1=_.map(items1,function(d){return 'decade  '+d.decade +'   '+'rank  '+ d.rank})
+  console.log(items1)
+   return items1.join(', ')
 }
 
 function func5(){
-  return '...'
+  old_Items =_.filter(items,function(d){return d.rank <300})
+  old_words=_.uniq(_.pluck(old_Items,'word'))
+  new_Items =_.filter(old_Items,function(d){return  d.decade>=1930})
+  new_words=_.uniq(_.pluck(new_Items,'word'))
+
+
+   return _.difference(old_words,new_words).join(', ')
 }
 
 function func6(){
-  return '...'
+  old_Items =_.filter(items,function(d){return d.rank <300})
+  old_words=_.uniq(_.pluck(old_Items,'word'))
+  new_Items =_.filter(old_Items,function(d){return  d.decade<2000})
+  new_words=_.uniq(_.pluck(new_Items,'word'))
+
+
+   return _.difference(old_words,new_words).join(', ')
 }
 
 function func7(){
-  return '...'
+  items2 =_.filter(items,{'word':'internet'})
+
+  items1=_.sortBy(items2,'decade')
+
+
+words = _.chain(items)
+  .groupBy('word')
+  .filter(function(d) {
+      return _.min(_.values(d), 'decade').decade == items1[0].decade
+  }).map(function(d) { return d[0].word })
+  .value().join(', ')
+   return words
 }
 
 function func8(){
-  return '...'
+  oil_words =_.filter(items,{'word':'oil'})
+
+  oil_words=_.sortBy(oil_words,'decade')
+  gold_words =_.filter(items,{'word':'gold'})
+
+gold_words=_.sortBy(gold_words,'decade')
+
+   decade = _.find(_.zip(oil_words, gold_words), function(d) {
+     return parseInt(d[0].rank) > parseInt(d[1].rank)
+   })[0].decade
+
+   return decade
 }
 
 function func9(){
-  return '...'
+  top20Words=_.groupBy(items,'word')
+  top20Words=_.sortBy(_.pairs(_.mapValues(top20Words,function(d) { return d[0].rank - d[d.length-1].rank })),function(r){return r[1]})
+
+
+  return _.take(top20Words,20).join(', ')
 }
 
 function func10(){
-  return '...'
+  // Get the ranks for 'war'
+  warRanks = _.chain(items)
+    .filter({'word': 'war'})
+    .pluck('rank')
+    .value()
+
+  // Construct the bitmap for 'war'
+  _.forEach(warRanks, function(rank, i) {
+    if (i==0) warBitMap = 0
+    else {
+      bit = (warRanks[i] - warRanks[i-1]) < 0 ? 1 : 0
+      warBitMap = warBitMap | bit << (i-1)
+    }
+  })
+
+  // Gather words and corresponding ranks, for those words listed in all 11 decades
+  ranks = _.chain(items)
+    .groupBy('word')
+    .mapValues(function(w) { return _.pluck(_.values(w), 'rank') })
+    .pick(function(value) { return value.length == 11 })
+    .value()
+
+  // Map value of each word to its' bitmap
+  bitMaps = _.mapValues(ranks, function(r, i) {
+    _.forEach(r, function(rank, i) {
+      if (i==0) bitMap = 0
+      else {
+        bit = (r[i] - r[i-1]) < 0 ? 1 : 0
+        bitMap = bitMap | bit << (i-1)
+      }
+    })
+  return bitMap
+  })
+
+  // Find words with bitmaps matching "war's" bitmap
+  matches = _.chain(bitMaps)
+    .pick(function(bitMap) { return bitMap == warBitMap })
+    .keys()
+    .without('war')
+    .value().join(', ')
+
+  return matches
 }
 
 // initialize the parallax effect
