--- a/week12/team/zayo.html
+++ b/week12/team/zayo.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-  <div class="parallax-container"  style="height:325px">
+  <div class="parallax-     container"  style="height:325px">
     <div class="parallax">
       <img src="http://mms.businesswire.com/media/20150722005491/en/239161/5/ZAYO_Group_SPOT.jpg">
       <h1 id="title">Zayo / Big Data: Business Intelligience Collaboration
@@ -120,11 +120,11 @@ var profileItems
 var servicesItems
 
 function loadDataThenRunSolutions() {
-  $.get('/data/customer_accounts_profile.csv')
+  $.get('http://sumi6109.github.io/book3/data/customer_accounts_profile.csv')
     .done(function(data){
       profileItems = csv2jsonProfile(data)
       console.log("profile:",profileItems)
-      $.get('/data/customer_accounts_service.csv')
+      $.get('http://sumi6109.github.io/book3/data/customer_accounts_service.csv')
         .done(function(data){
           servicesItems = csv2jsonServices(data)
           console.log("services:",servicesItems)
